# flow_editor_main

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: find_dependencies_linux.cmake  find_dependencies_window.cmake
cmake/linux/: find_linux_aruco.cmake  find_linux_boost.cmake  find_linux_ceres.cmake  find_linux_eigen.cmake  find_linux_fmt.cmake  find_linux_nlohmann.cmake  find_linux_opencv.cmake  find_linux_openmp.cmake  find_linux_pcl.cmake  find_linux_poco.cmake  find_linux_qt.cmake  find_linux_spdlog.cmake  find_linux_vtk.cmake
cmake/local_lib/: find_boost.cmake  find_eigen.cmake  find_fmt.cmake  find_minizip_ng.cmake  find_nlohmann.cmake  find_pcl.cmake  find_review_glqt.cmake  find_spdlog.cmake
cmake/window/: find_win_aruco.cmake  find_win_boost.cmake  find_win_ceres.cmake  find_win_cgal.cmake  find_win_fmt.cmake  find_win_halcon.cmake  find_win_nlohmann.cmake  find_win_opencv.cmake  find_win_pcl.cmake  find_win_poco.cmake  find_win_qt.cmake  find_win_spdlog.cmake  find_win_vtk.cmake
data/rcc/: font.qrc
example/: CMakeLists.txt
example/ex_101_flow/: CMakeLists.txt  flow.hpp  main.cxx  nodes_creator.hpp
example/ex_101_flow/rcc/: icon.qrc
example/ex_101_flow/util/: guid_creator.hpp  random_string.hpp  style_creator.hpp
example/ex_101_show_view/: CMakeLists.txt  main.cxx
example/ex_102_random_view/: CMakeLists.txt  main.cxx
example/ex_103_dynamic_node/: main.cxx
example/ex_104_flow/: CMakeLists.txt  main.cxx
flow_editor/: CMakeLists.txt
flow_editor/include/flow_editor/: data_def.hpp  flow.hpp  flow_editor.hpp  flow_model.hpp
flow_editor/include/flow_editor/flow_view/: flow_scene.hpp  flow_view.hpp
flow_editor/src/flow_view/: default_style.hpp  flow_scene.cxx  flow_scene_data.cxx  flow_scene_data.hpp  flow_view.cxx  scene_config.hpp
flow_editor/src/items/: abs_node_item.hpp  connection_item.cxx  connection_item.hpp  in_node_item.cxx  in_node_item.hpp  node_item.cxx  node_item.hpp  out_node_item.cxx  out_node_item.hpp
flow_editor/src/items/connection/: connection_item.cxx  connection_item.hpp  connection_state.cxx  connection_state.hpp  draft_connection_item.cxx  draft_connection_item.hpp
flow_editor/src/items/painter/: in_node_painter.cxx  in_node_painter.hpp  node_painter.cxx  node_painter.hpp  out_node_painter.cxx  out_node_painter.hpp
flow_editor/src/node_sub_geometry/: dynamic_geometry.cxx  dynamic_geometry.hpp  dynamic_h_geometry.cxx  dynamic_h_geometry.hpp  dynamic_h_port_geometry.cxx  dynamic_h_port_geometry.hpp  dynamic_hor_geometry.cxx  dynamic_hor_geometry.hpp  hor_geometry_compute.cxx  hor_geometry_compute.hpp  node_sub_geometry.hpp
